--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^11.2.13",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
