--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "vite-plugin-static-copy": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
