--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.6",
     "vite-plugin-static-copy": "^1.0.6"
   },
   "devDependencies": {
